{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 10,
  "lineage": "c8af3759-57c0-7904-2b6e-c58e08afbda4",
  "resources": [
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_instance",
      "name": "servers",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e5424edfe926b43",
            "arn": "arn:aws:ec2:ap-south-1:993271095324:instance/i-01946c2724fc34b20",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01946c2724fc34b20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "text",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02bf2f2f6bb5ebaed",
            "private_dns": "ip-172-16-1-155.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.155",
            "public_ip": "13.232.156.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1c6021599bb50f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6b8b79c972e5f03",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0108be30bedb2d90b"
            ]
          },
          "dependencies": [
            "module.terraproject.aws_security_group.sg_project",
            "module.terraproject.aws_subnet.sub",
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993271095324:internet-gateway/igw-040fc4de8ba0b2c06",
            "id": "igw-040fc4de8ba0b2c06",
            "owner_id": "993271095324",
            "vpc_id": "vpc-0a022b579c182374b"
          },
          "dependencies": [
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040fc4de8ba0b2c06",
            "id": "r-rtb-099982812363d06811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099982812363d0681",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraproject.aws_internet_gateway.my_igw",
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03631043ecca4cdc2",
            "route_table_id": "rtb-099982812363d0681",
            "subnet_id": "subnet-0e6b8b79c972e5f03"
          },
          "dependencies": [
            "module.terraproject.aws_subnet.sub",
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_project",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993271095324:security-group/sg-0108be30bedb2d90b",
            "description": "My sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0108be30bedb2d90b",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_project",
            "name_prefix": "",
            "owner_id": "993271095324",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a022b579c182374b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1227728297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0108be30bedb2d90b",
            "security_group_rule_id": "sgr-0591e936a38dcb875",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraproject.aws_security_group.sg_project",
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993271095324:subnet/subnet-0e6b8b79c972e5f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6b8b79c972e5f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993271095324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a022b579c182374b"
          },
          "dependencies": [
            "module.terraproject.aws_vpc.vpcproject"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993271095324:subnet/subnet-08de111a50e5276d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de111a50e5276d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993271095324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a022b579c182374b"
          },
          "dependencies": [
            "module.terraproject.aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "module": "module.terraproject",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcproject",
      "provider": "module.terraproject.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993271095324:vpc/vpc-0a022b579c182374b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-018addf05cee119ba",
            "default_route_table_id": "rtb-099982812363d0681",
            "default_security_group_id": "sg-07d89e55317a45004",
            "dhcp_options_id": "dopt-0e212c559cd0bf443",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a022b579c182374b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099982812363d0681",
            "owner_id": "993271095324"
          }
        }
      ]
    }
  ]
}